# choice_exchange

./: CHANGELOG.md  README.md  deploy.sh  deploy_testnet.sh  deployed_contracts.md  pre_audit_checklist.md
audit/: audit_fixes.md  audit_fixes_v0.1.md  pre_audit_checklist.md
contracts/choice_factory/: Cargo.toml  README.md  build.rs
contracts/choice_factory/.cargo/: config.toml
contracts/choice_factory/schema/: config_response.json  execute_msg.json  instantiate_msg.json  pair_info.json  pairs_response.json
contracts/choice_factory/src/: contract.rs  state.rs  testing.rs
contracts/choice_farm/: Cargo.toml  README.md
contracts/choice_farm/.cargo/: config.toml
contracts/choice_farm/examples/: farm_schema.rs
contracts/choice_farm/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  staker_info_response.json
contracts/choice_farm/src/: contract.rs  querier.rs  state.rs  testing.rs
contracts/choice_pair/: Cargo.toml  README.md  build.rs  new_readme.md
contracts/choice_pair/.cargo/: config.toml
contracts/choice_pair/schema/: cw20_hook_msg.json  execute_msg.json  instantiate_msg.json
contracts/choice_pair/src/: contract.rs  error.rs  response.rs  state.rs  testing.rs
contracts/choice_router/: Cargo.toml  README.md
contracts/choice_router/.cargo/: config.toml
contracts/choice_router/examples/: router_schema.rs
contracts/choice_router/schema/: config_response.json  execute_msg.json  query_msg.json
contracts/choice_router/src/: contract.rs  operations.rs
contracts/choice_router/src/testing/: tests.rs
contracts/choice_send_to_auction/: Cargo.toml  README.md
contracts/choice_send_to_auction/.cargo/: config.toml
contracts/choice_send_to_auction/examples/: send_to_auction_schema.rs
contracts/choice_send_to_auction/schema/: execute_msg.json  instantiate_msg.json
contracts/choice_send_to_auction/src/: contract.rs  lib.rs  msg.rs  querier.rs  state.rs  tests.rs
contracts/choice_token/: Cargo.toml
contracts/choice_token/.cargo/: config.toml
contracts/choice_vault/: Cargo.toml
contracts/choice_vault/src/: contract.rs  error.rs  lib.rs  mock_querier.rs  msg.rs  state.rs  testing.rs
cw20_adapter/: cw20_adapter.wasm
docs/: choice.md
testnet_deploy/: add_decimals_mainnet.sh  add_native_token_decimals.sh  deploy_mainnet.sh  deploy_testnet.sh  guide.md
